--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,11 @@
 
+body {
+  padding-top: 5rem;
+}
+  .starter-template {
+  padding: 3rem 1.5rem;
+  text-align: center;
+}
+  .carousel-item {
+  height: 550px;
+}
