--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,55 @@
+body {
+    font-family: 'Raleway';font-size: 22px;
+}
 
+img {
+  display: flex;
+  padding: 20px;
+  margin: 0 auto;
+  width: 700px;
+  height: 600px;
+  position: relative;
+
+}
+
+h2 {
+  width: 70%;
+  margin: 15vh 15vw;
+  font-size: 2em;
+  text-align: justify;
+}
+
+h4 {
+  width: 70%;
+  margin: 15vh 15vw;
+  font-size: 2em;
+  font-style:italic;
+}
+
+p {
+  width: 70%;
+  margin: 7vh 10vw;
+  font-size: 1.5em;
+  text-align: justify;
+}
+
+.container {
+  position: relative;
+}
+
+/* Top left text */
+.text-block {
+  position: absolute;
+  top: 200px;
+  left: 400px;
+  font-size: 2em;
+}
+
+#demobox2 {
+  background-color: #ff7100;
+  width: 700px;
+  height: 700px;
+  left: 350px;
+  top: 80px;
+  position: absolute;
+}
