--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Raleway';font-size: 22px;
+  text-align: center;
 }
 
 img {
@@ -9,6 +9,7 @@ img {
   width: 700px;
   height: 600px;
   position: relative;
+  display: block;
 
 }
 
@@ -19,16 +20,21 @@ h2 {
   text-align: justify;
 }
 
-h4 {
+h3 {
   width: 70%;
-  margin: 15vh 15vw;
-  font-size: 2em;
+  margin: 15vh 29vw;
+  font-size: 4em;
   font-style:italic;
+  position: absolute;
+}
+
+h4 {
+  text-align: center;
 }
 
 p {
   width: 70%;
-  margin: 7vh 10vw;
+  margin: 20vh 10vw;
   font-size: 1.5em;
   text-align: justify;
 }
@@ -37,21 +43,37 @@ p {
   position: relative;
 }
 
-/* Top left text */
+/* Top text on images */
 .text-block {
   position: absolute;
   top: 200px;
-  left: 400px;
+  left: 300px;
   font-size: 2em;
 }
 
 #demobox2 {
-  background-color: #ff7100;
+  background-color: #FF7F41;
   width: 700px;
-  height: 700px;
-  left: 350px;
-  top: 80px;
+  height: 650px;
+  right: 470px;
+  top: 90px;
   position: absolute;
+  display: block;
+}
+
+/* transparent box for formating */
+#demobox3 {
+  background-color: white; opacity: 0;
+  width: 700px;
+  height: 650px;
+  right: 470px;
+  top: 90px;
+}
+
+div.contrast {
+  background-color: #FF7F41;
+  display: flex;
+  justify-content:space-around;
 }
 
 padding-top: 5rem;
@@ -61,4 +83,4 @@ padding: 3rem 1.5rem;
 text-align: center;
 }
 .carousel-item {
-height: 550px; 
+height: 550px;
