--- a/css/styles.css
+++ b/css/styles.css
@@ -91,10 +91,25 @@ p {
   position: absolute;
   display: block;
 }
+
+#demobox5 {
+  background-color:
+  background-color: #B22222;
+  width: 650px;
+  height: 600px;
+  left: 300px;
+  top: 100px;
+  position: absolute;
+  display: block;
+}
+
 div.contrast {
   background-color: (255, 0, 0, 0.4);
-  background-image: linear-gradient(rgba(255, 0, 0, 0.2),rgba(255, 0, 0, 0.6));
+  background-image: linear-gradient(rgba(255, 0, 0, 0),rgba(255, 0, 0, 0.6));
   padding: 70px;
+}
+
+div.header-image {
 }
 
 div.gallery {
@@ -125,19 +140,18 @@ div.desc {
   width: 24.99999%;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 700px) {
   .responsive {
     width: 49.99999%;
     margin: 6px 0;
   }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 500px) {
   .responsive {
     width: 100%;
   }
 }
-
 
 
 
@@ -257,6 +271,42 @@ div.contrast2 {
   .form-container .btn:hover, .open-button:hover {
     opacity: 1;
   }
+
+.portfolio-box {
+  position: relative;
+  display:block;
+  max-width: 650px;
+  margin: 0 auto;
+}
+
+}
+.portfolio-vox .portfolio-box-caption {
+  position: absolute;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  opacity: 0;
+  color: #fff;
+  background: rgba(rgba(255, 0, 0, 0.6);
+  webkit-transition: all 0.2s;
+  moz-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
+  position: absolute;
+  top: 50%;
+  width: 100%
+  transform: translateY(-50%);
+  text-align: center;
+}
+
+.portfolio-box:hover .portfolio-box-caption {
+  opacity: 1;
+}
+
 
 text {
 
