--- a/css/styles.css
+++ b/css/styles.css
@@ -15,11 +15,12 @@ body {
 
 img {
   display: flex;
-  padding: 20px;
   margin: 0 auto;
   position: relative;
   display: block;
-
+}
+.test {
+  box-shadow: 120px 90px red;
 }
 
 h2 {
