--- a/css/styles.css
+++ b/css/styles.css
@@ -12,15 +12,17 @@ body {
   font-family:"Times New Roman", Times, serif;
 }
 
+nav {
+  background-color: white; opacity: 0;
+}
 
 img {
   display: flex;
+  padding: 20px;
   margin: 0 auto;
   position: relative;
   display: block;
-}
-.test {
-  box-shadow: 120px 90px red;
+
 }
 
 h2 {
@@ -64,6 +66,7 @@ p {
 
 .container {
   position: relative;
+  background-colour:
 }
 
 /* Top text on images */
