--- a/css/styles.css
+++ b/css/styles.css
@@ -341,3 +341,11 @@ height: 700px;
 }
 
 div.
+
+.fa {
+  padding: 10px;
+  font-size: 20px;
+  width: 25px;
+  text-align: center;
+  text-decoration: none;
+}
