--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,11 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
   }
-
+  @media only screen and (max-device-width: 1366px) {
+    .parallax {
+      background-attachment: scroll;
+    }
+  }
 
 
 div.contrast {
