deleting unnecessary form, trying to figure out mini pic layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,10 @@ img {
   box-shadow: 120px 90px #8B0000;
 }
 
+.imageshadow2 {
+  box-shadow: -120px -70px #8B0000;
+}
+
 h2 {
   width: 70%;
   margin: 15vh 15vw;
@@ -42,11 +46,12 @@ h2 {
 }
 
 h3 {
-  width: 70%;
+  width: 80%;
   margin: 15vh 29vw;
-  font-size: 4em;
-  font-style:italic;
-  position: absolute;
+  font-size: 3em;
+  font-style;
+  text-align: center
+}
 
   <style>
     h3 {
@@ -233,54 +238,6 @@ div.desc {
 
 
 
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.flip-box {
-  background-color: transparent;
-  width: 300px;
-  height: 200px;
-  border: 1px solid #f1f1f1;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
-}
-
-/* This container is needed to position the front and back side */
-.flip-box-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-/* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-box:hover .flip-box-inner {
-  transform: rotateY(180deg);
-}
-
-/* Position the front and back side */
-.flip-box-front, .flip-box-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-/* Style the front side */
-.flip-box-front {
-  color: black;
-}
-
-/* Style the back side */
-.flip-box-back {
-  background-color: pink;
-  color: white;
-  transform: rotateY(180deg);
-}
 
 div.contrast2 {
   background-color: rgba(255, 0, 0, 0.4);
