--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,6 @@ html {
     color: rgba(0, 0, 0, 0.0);
   }
 
-.vl {
-  border-left: 6px solid white;
-  width: 500px;
-}
-
 body {
   text-align: center;
   font-family:"Times New Roman", Times, serif;
@@ -44,6 +39,16 @@ h2 {
   font-size: 2em;
   text-align: justify;
 }
+  h6 {
+    color: rgb(255,255,255);
+    transform:rotate(90deg);
+    font-size:4em;
+    position:relative;
+    top: 50%;
+    right: 6%;
+}
+
+
 
 h3 {
   width: 80%;
