cool social button

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,12 +10,24 @@ html {
 
 nav {
     color: rgba(0, 0, 0, 0.0);
-
+    font-size: 15px
   }
 
+nav.active {
+
+  font-style: oblique;
+}
   .navbar-nav > li{
   padding-right:15px;
+  font-color: black
+
 }
+nav.social-navigation {
+  display: inline-block;
+  float: right;
+}
+
+
 
 .vl {
   border-left: 6px solid white;
@@ -24,7 +36,8 @@ nav {
 
 body {
   text-align: center;
-  font-family:"Times New Roman", Times, serif;
+  font-family:"Helvetica";
+  font-size: 12px
 }
 
 
