improved 'read more button but not perfect

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ nav {
 
 body {
   text-align: center;
-  font-family:"Times New Roman", Times, serif;
+  font-family:"HelveticaNeue";
 }
 
 
@@ -53,11 +53,13 @@ h2 {
   h6 {
     color: #8B0000;
     font-size: 5em;
-    font-family: "Courier, monospace";
+    font-family: "courier";
     position:relative;
+    outline-color: white;
     top: 55px;
     z-index: 9;
     right: 80px;
+     text-outline: 1px white solid;
 }
 
 
