--- a/css/styles.css
+++ b/css/styles.css
@@ -10,16 +10,16 @@ html {
 
 nav {
     color: rgba(0, 0, 0, 0.0);
-    font-size: 15px
+    font-size: 15px;
+    font-color: #C33213;
   }
 
 nav.active {
-
+  font-color: red;
   font-style: oblique;
 }
   .navbar-nav > li{
-  padding-right:15px;
-  font-color: black
+  padding-right:20px;
 
 }
 nav.social-navigation {
