trying to make a box around the text

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,10 @@ a:link {
   font-family: "courier"
 }
 
+p span {
+  background-color: (255, 0, 0, 0.4);
+}
+
 .container {
   position: relative;
   colour: rgba(0,0,0,0);
