--- a/css/styles.css
+++ b/css/styles.css
@@ -43,9 +43,19 @@ h2 {
   text-align: justify;
 }
 
+.footerline {
+  font-size: 2em;
+  text-align:left;
+}
+
+.list-inline {
+  justify-content: space-around;
+}
+
+}
   h6 {
     color: #8B0000;
-    font-size: 6em;
+    font-size: 8em;
     font-family: "Courier";
     position:relative;
     top: 55px;
