--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,8 @@ img {
   margin: 0 auto;
   position: relative;
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .imageshadow {
@@ -73,6 +75,11 @@ h9 {
 h8 {
     color: white;
     font-size:2em;
+}
+
+.px-2 {
+    padding-left: ($spacer * .10) !important;
+    padding-right: ($spacer * .10) !important;
 }
 
 h3 {
